<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 Razeware LLC
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ Notwithstanding the foregoing, you may not use, copy, modify, merge, publish,
  ~ distribute, sublicense, create a derivative work, and/or sell copies of the
  ~ Software in any work that is designed, intended, or marketed for pedagogical or
  ~ instructional purposes related to programming, coding, application development,
  ~ or information technology.  Permission for such use, copying, modification,
  ~ merger, publication, distribution, sublicensing, creation of derivative works,
  ~ or sale is expressly withheld.
  ~
  ~ This project and source code may use libraries or frameworks that are
  ~ released under various Open-Source licenses. Use of those libraries and
  ~ frameworks are governed by their own individual licenses.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:paddingBottom="@dimen/padding_standard"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".zooguide.ui.fragments.AnimalFragment">

    <ImageView
        android:id="@+id/animalImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/padding_standard"
        tools:src="@drawable/animal_elephant_sample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_standard"
        android:layout_marginEnd="@dimen/padding_standard"
        android:layout_marginStart="@dimen/padding_standard"
        android:textColor="@android:color/black"
        android:textSize="@dimen/detail_name_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animalImage"
        tools:text="FirstName LastName" />

    <TextView
        android:id="@+id/fullName3"
        android:layout_marginTop="@dimen/padding_standard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_standard"
        android:layout_marginStart="@dimen/padding_standard"
        android:text="@string/where_do_i_live"
        android:textColor="@android:color/black"
        android:textSize="@dimen/detail_planet_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/habitatImage"
        android:layout_width="@dimen/list_item_items_height"
        android:layout_height="@dimen/list_item_items_height"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName3" />

    <TextView
        android:id="@+id/fullName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_standard"
        android:layout_marginStart="@dimen/padding_standard"
        android:layout_marginTop="@dimen/padding_standard"
        android:text="@string/how_do_i_move"
        android:textColor="@android:color/black"
        android:textSize="@dimen/detail_planet_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodImage" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/foodImage"
        android:layout_width="@dimen/list_item_items_height"
        android:layout_height="@dimen/list_item_items_height"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName2" />

    <TextView
        android:id="@+id/fullName2"
        android:layout_marginTop="@dimen/padding_standard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_standard"
        android:layout_marginStart="@dimen/padding_standard"
        android:text="@string/what_do_i_eat"
        android:textColor="@android:color/black"
        android:textSize="@dimen/detail_planet_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habitatImage" />

    <ImageView
        android:id="@+id/movementImage"
        android:layout_width="@dimen/list_item_items_height"
        android:layout_height="@dimen/list_item_items_height"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName4"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/fullName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/how_fast_do_i_move"
        android:textColor="@android:color/black"
        android:textSize="@dimen/detail_planet_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movementImage" />

    <TextView
        android:id="@+id/speedVelocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_standard"
        android:layout_marginStart="@dimen/padding_standard"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/detail_name_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName5"
        tools:text="20 km" />

    <TextView
        android:id="@+id/fullName7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/how_hungry_am_i"
        android:textColor="@android:color/black"
        android:textSize="@dimen/detail_planet_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speedVelocity" />

    <TextView
        android:id="@+id/hangerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_standard"
        android:layout_marginStart="@dimen/padding_standard"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/detail_name_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName7"
        tools:text="I'm starving" />

    <TextView
        android:id="@+id/fullName6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/my_colors"
        android:textColor="@android:color/black"
        android:textSize="@dimen/detail_planet_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hangerText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/colorList"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/list_item_items_height"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName6" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>